Test results for a 20% sample

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -151,13 +151,14 @@
     "\n",
     "## time-saver settings\n",
     "set_acceleration = {\n",
-    "    'dbf_cache'             : True,\n",
-    "    'sample_size'           : 1/16, #1/5, 1/8, 1/16 = 80, 30, 09 runtime minutes\n",
-    "    'pop_cache'             : True,\n",
-    "    'distance_cache'        : True,\n",
-    "    'cluster_parallel_cores': 6,\n",
-    "    'cluster_L1_cache'      : True,\n",
-    "    'cluster_L2_cache'      : True\n",
+    "    'dbf_cache'              : True, #1:40\n",
+    "    'sample_size'            : 1/20, #1/5, 1/10, 1/20 = 60, ??, 06 runtime minutes\n",
+    "    'pop_cache'              : True,\n",
+    "    'distance_parallel_cores': 8,\n",
+    "    'distance_cache'         : True,\n",
+    "    'cluster_parallel_cores' : 8,\n",
+    "    'cluster_L1_cache'       : True,\n",
+    "    'cluster_L2_cache'       : True\n",
     "    }\n",
     "\n",
     "## map parameters\n",
@@ -214,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Cache\n"
+      "Build/Cache Decision: Build\n"
      ]
     }
    ],
@@ -365,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Cache\n"
+      "Build/Cache Decision: Build\n"
      ]
     }
    ],
@@ -540,7 +541,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Cache\n"
+      "Build/Cache Decision: Build\n",
+      "Starting 8 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3e59cac6b4049aaafe687e85f9403b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?engine/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6470e177f4f64c9db8be7a1bde26a4ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "measure_distance_parallel_slice:   0%|          | 0/3599 [00:00<?, ?tasks/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping engine(s): 1653141031\n",
+      "engine set stopped 1653141031: {'engines': {'0': {'exit_code': 0, 'pid': 4902, 'identifier': '0'}, '1': {'exit_code': 0, 'pid': 4903, 'identifier': '1'}, '2': {'exit_code': 0, 'pid': 4904, 'identifier': '2'}, '3': {'exit_code': 0, 'pid': 4905, 'identifier': '3'}, '4': {'exit_code': 0, 'pid': 4906, 'identifier': '4'}, '5': {'exit_code': 0, 'pid': 4907, 'identifier': '5'}, '6': {'exit_code': 0, 'pid': 4910, 'identifier': '6'}, '7': {'exit_code': 0, 'pid': 4914, 'identifier': '7'}}, 'exit_code': 0}\n",
+      "Stopping controller\n",
+      "Controller stopped: {'exit_code': 0, 'pid': 4890, 'identifier': 'ipcontroller-1653141030-4lp8-4884'}\n"
      ]
     }
    ],
@@ -563,7 +603,7 @@
     "        return xy_dist\n",
     "\n",
     "    ## run engine in parallel for each slice of the data\n",
-    "    with Cluster(n = 6) as clust:\n",
+    "    with Cluster(n = set_acceleration['distance_parallel_cores']) as clust:\n",
     "        view = clust.load_balanced_view()\n",
     "        asyncresult = view.map_async(measure_distance_parallel_slice, the_iter)\n",
     "        asyncresult.wait_interactive()\n",
@@ -921,20 +961,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b379f21e-f5c7-407d-a952-d277d0d59e06",
+   "id": "5cbe86a0-e8a4-4893-acbb-40015bea900f",
    "metadata": {},
    "source": [
-    "#### PVD3 - Calculate Bar Chart Coordinates"
+    "#### PVD3 - calculate Cluster-wise statistics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9d9bc29d-3185-4283-b87e-762e8c74827d",
+   "id": "8be81bb1-5d99-4544-948f-6cf91568e4a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TODO:  CALCULATE CLUSTER STATS HERE - HDI, YEARS OF EDU, INCOME PC, LIFESPAN\n",
+      "WARNING: EDUCATION IS CURRENTLY A SIMPLIFIED (TWO CATEGORY) UNDERESTIMATE\n"
+     ]
+    }
+   ],
    "source": [
-    "## votes, lifespan, income, college"
+    "print('TODO:  CALCULATE CLUSTER STATS HERE - HDI, YEARS OF EDU, INCOME PC, LIFESPAN')\n",
+    "print('WARNING: EDUCATION IS CURRENTLY A SIMPLIFIED (TWO CATEGORY) UNDERESTIMATE')\n",
+    "\n",
+    "## sum to cluster level\n",
+    "\n",
+    "## scale to hdi factors\n",
+    "\n",
+    "## calculate hdi\n",
+    "\n",
+    "## scale to plot dimensions"
    ]
   },
   {
@@ -1177,38 +1235,7 @@
    "execution_count": 24,
    "id": "cbdf5915-b75b-4808-a1e2-16dc183b639e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          stat    total      stat_sum  stat_scale\n",
-      "cluster                                          \n",
-      "0        35014   845411   29601074314    0.823316\n",
-      "1        42528  3963202  168547870358    1.000000\n",
-      "2        31598  2119433   66970030688    0.742993\n",
-      "3        31196   265630    8286495511    0.733540\n",
-      "4        32329  2095889   67758956893    0.760182\n",
-      "5        36251  3004337  108910426662    0.852403\n",
-      "6        37108   561698   20843450983    0.872555\n",
-      "7        33305  1296769   43188497331    0.783131\n",
-      "8        34430  2937074  101124299024    0.809584\n",
-      "9        38714   660339   25564553907    0.910318\n",
-      "         stat    total     stat_sum  stat_scale\n",
-      "cluster                                        \n",
-      "0          78   845411   66234683.3      0.9750\n",
-      "1          80  3963202  315758607.9      1.0000\n",
-      "2          77  2119433  162472688.4      0.9625\n",
-      "3          79   265630   21003284.4      0.9875\n",
-      "4          77  2095889  160542455.6      0.9625\n",
-      "5          80  3004337  239491863.1      1.0000\n",
-      "6          78   561698   44056423.1      0.9750\n",
-      "7          79  1296769  101990448.2      0.9875\n",
-      "8          77  2937074  227464330.2      0.9625\n",
-      "9          79   660339   52346354.9      0.9875\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## draw bars based on population counts\n",
     "def draw_abs_bar(ax, stat_col, total_col, group_series, stats = pop_data):\n",
@@ -1288,7 +1315,7 @@
     "                fontsize = set_font['small'], fontweight = 'bold',\n",
     "                bbox = bb, color = set_color['OrangeDark'])\n",
     "\n",
-    "##\n",
+    "## draw bar based on statistics relative to average\n",
     "def draw_rel_bar(ax, stat_col, group_series,\n",
     "                 total_col = 'DP05_0001E', stats = pop_data):\n",
     "    \n",
@@ -1301,9 +1328,41 @@
     "    stats = stats.groupby('cluster').sum()\n",
     "    stats['stat'] = (stats['stat_sum'] / stats['total']).round(0).astype(int)\n",
     "    \n",
-    "    ## scale stats by highest value\n",
+    "    ## calculate mean bar\n",
+    "    stats['mean'] = sum(stats['stat'] * stats['total'])\n",
+    "    stats['mean'] = stats['mean'] / sum(stats['total'])\n",
+    "    stats['mean'] = np.round(stats['mean'], 0).astype(int)\n",
+    "    \n",
+    "    ## scale stats by largest total\n",
+    "    stats['mean_scale'] = stats['mean'] / max(stats['stat'])\n",
     "    stats['stat_scale']  = stats['stat']  / max(stats['stat'])\n",
-    "    print(stats)\n",
+    "\n",
+    "    \n",
+    "    ## -- draw bar charts\n",
+    "    \n",
+    "    ## set x and y limits\n",
+    "    poster_ax[ax].set_xlim(0, 1)\n",
+    "    poster_ax[ax].set_ylim(0, 2)\n",
+    "    \n",
+    "    ## generate y coordinates\n",
+    "    bar_space = 2 / (stats.shape[0] + 1)\n",
+    "    bar_spacing = np.arange(bar_space, 2, bar_space)\n",
+    "    \n",
+    "    ## draw bars\n",
+    "    poster_ax[ax].barh(\n",
+    "        y = bar_spacing, height = bar_space * 0.88,\n",
+    "        color = set_color['OrangeLight'], edgecolor = set_color['OrangeDark'],\n",
+    "        width = stats['stat_scale'] * 0.88, left = 0.1, lw = 2)\n",
+    "    poster_ax[ax].barh(\n",
+    "        y = bar_spacing, height = bar_space * 0.88, ls = \":\",\n",
+    "        color = '#33221100', edgecolor = set_color['OrangeDark'],\n",
+    "        width = stats['mean_scale'] * 0.88, left = 0.1, lw = 2)\n",
+    "    \n",
+    "    ## bbox parameters\n",
+    "    bb = dict(edgecolor = set_color['OrangeDark'], lw = 2,\n",
+    "              facecolor = set_color['OrangeBG'] + '80', boxstyle = 'round')\n",
+    "    bb_blue = dict(edgecolor = set_color['AzureDark'], lw = 2,\n",
+    "              facecolor = set_color['AzureBG'] + '80', boxstyle = 'round')\n",
     "\n",
     "## execute code - 2020 POTUS GOP votes, education\n",
     "draw_abs_bar('gop',    'rep_vote', 'total_vote', geo_data['l1_cluster'])\n",
@@ -1354,20 +1413,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 11:30:59\n",
-      "   H3: 11:30:59\n",
-      "  GD1: 11:30:59\n",
-      "  RD1: 11:30:59\n",
-      "  RD2: 11:31:00\n",
-      "  RD3: 11:31:00\n",
-      "  MD1: 11:31:03\n",
-      "  MD2: 11:31:03\n",
-      "  MD3: 11:31:03\n",
-      " CSS1: 11:31:03\n",
-      " PVD1: 11:31:03\n",
-      " PVD2: 11:31:03\n",
-      "  RV0: 11:31:04\n",
-      "  End: 11:31:09\n"
+      "   H2: 09:50:21\n",
+      "   H3: 09:50:21\n",
+      "  GD1: 09:50:24\n",
+      "  RD1: 09:50:24\n",
+      "  RD2: 09:50:30\n",
+      "  RD3: 09:50:30\n",
+      "  MD1: 09:54:17\n",
+      "  MD2: 09:54:34\n",
+      "  MD3: 09:56:01\n",
+      " CSS1: 09:56:01\n",
+      " PVD1: 09:56:01\n",
+      " PVD2: 09:56:01\n",
+      "  RV0: 09:56:02\n",
+      "  End: 09:56:07\n"
      ]
     }
    ],
