Swap in scatterplot panels in place of some bar charts; Draft more explanatory text

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -144,9 +144,9 @@
     "\n",
     "## set font sizes\n",
     "set_font = {\n",
-    "    'small' : 16,\n",
-    "    'medium': 24,\n",
-    "    'large' : 32\n",
+    "    'small' : 14,\n",
+    "    'medium': 21,\n",
+    "    'large' : 28\n",
     "    }\n",
     "\n",
     "## time-saver settings\n",
@@ -993,8 +993,8 @@
     "    ## define axes\n",
     "    global poster_ax\n",
     "    poster_ax = dict()\n",
-    "    poster_ax['explain'] = poster_fig.add_subplot(poster_grid[0:3, 0:1])\n",
-    "    poster_ax['elbow']   = poster_fig.add_subplot(poster_grid[3:4, 0:1])\n",
+    "    poster_ax['explain'] = poster_fig.add_subplot(poster_grid[0:4, 0:1])\n",
+    "    #poster_ax['elbow']   = poster_fig.add_subplot(poster_grid[3:4, 0:1])\n",
     "\n",
     "    poster_ax['A<'] = poster_fig.add_subplot(poster_grid[0:2, 4:5])\n",
     "    poster_ax['A>'] = poster_fig.add_subplot(poster_grid[0:2, 5:6])\n",
@@ -1040,7 +1040,8 @@
     "def render_explanation(txt = explanatory_text):\n",
     "    poster_ax['explain'].set_ylim(0, 3)\n",
     "    poster_ax['explain'].set_xlim(0, 1)\n",
-    "    poster_ax['explain'].text(x = 0.05, y = 2.00, s = txt,\n",
+    "    poster_ax['explain'].text(x = 0.05, y = 2.5, s = txt,\n",
+    "        fontweight = 'bold',\n",
     "        horizontalalignment = 'left', verticalalignment = 'top',\n",
     "        fontsize = set_font['small'], color = set_color['OrangeDark'])\n",
     "    \n",
@@ -1142,7 +1143,7 @@
     "draw_generic_map('map2')\n",
     "label_cluster('map2', label_col = 'hdi_label')\n",
     "draw_cluster('map2', clust_polys_l2)\n",
-    "draw_cluster('map2', clust_polys_l1, the_lw = 4)"
+    "## draw_cluster('map2', clust_polys_l1, the_lw = 4)"
    ]
   },
   {
@@ -1150,7 +1151,7 @@
    "id": "99bf58ce-b8e8-474f-96ef-e7e3c5937f6f",
    "metadata": {},
    "source": [
-    "#### RV4 - bar panels (A<, A> / HDI, POP)"
+    "#### RV4 - bar panels"
    ]
   },
   {
@@ -1162,6 +1163,8 @@
    "source": [
     "def draw_bar(ax, major_col, minor_col = None, dat = cluster_data.copy(),\n",
     "             unit = None):\n",
+    "    \n",
+    "    dat = dat.iloc[::-1].copy()\n",
     "    \n",
     "    ## scale data for visualization purposes\n",
     "    def min_max_scale(x):\n",
@@ -1254,7 +1257,7 @@
    "id": "5b77caf8-a155-415f-996b-c995e5e4cf23",
    "metadata": {},
    "source": [
-    "#### RV5 - scatterplot (-<, ->, V<, V> / HDI x INC, EDU, LIF, GOP)"
+    "#### RV5 - scatterplots"
    ]
   },
   {
@@ -1264,31 +1267,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_scatter(ax, x, y = 'hdi', dat = cluster_data.copy()):\n",
+    "def euclid_distance(xy1, xy2):\n",
+    "    x1 = np.array(xy1.iloc[:, 0]).reshape((-1, 1))\n",
+    "    y1 = np.array(xy1.iloc[:, 1]).reshape((-1, 1))\n",
+    "    x2 = np.array(xy2.iloc[:, 0]).reshape((1, -1))\n",
+    "    y2 = np.array(xy2.iloc[:, 1]).reshape((1, -1))\n",
+    "    d = ((x1 - x2)**2 + (y1 - y2)**2)**(1/2)\n",
+    "    return d\n",
+    "\n",
+    "def space_scatter(x, y, space = 0.05, dat = cluster_data.copy()):\n",
     "    \n",
-    "    ## set plot limits\n",
+    "    ## generate a point grid\n",
+    "    x_grid = np.arange(min(dat[x]), max(dat[x]), space)\n",
+    "    y_grid = np.arange(min(dat[y]), max(dat[y]), space)\n",
+    "    xy_grid = np.meshgrid(x_grid, y_grid)\n",
+    "    for i in range(0, 2): xy_grid[i] = xy_grid[i].reshape((-1, 1))\n",
+    "    xy_grid = np.concatenate(xy_grid, axis = 1)\n",
+    "    xy_grid = pd.DataFrame(xy_grid, columns = ['x', 'y'])\n",
+    "    xy_grid['Link'] = -1\n",
+    "    \n",
+    "    ## calculate distance between grid points and xy\n",
+    "    xy_dist = euclid_distance(dat[[x, y]], xy_grid[['x','y']])\n",
+    "    \n",
+    "    ## assign points to closest grid point\n",
+    "    for i in range(0, dat.shape[0]):\n",
+    "        j = int(np.nonzero(xy_dist[i, ] == min(xy_dist[i, ]))[0][0])\n",
+    "        xy_grid.loc[j, 'Link'] = i\n",
+    "        xy_dist[:, j] = 999e6\n",
+    "        \n",
+    "    ## extract new coordinates\n",
+    "    xy_grid = xy_grid.loc[ xy_grid.Link != -1, :].sort_values('Link')\n",
+    "    xy_grid.index = dat.index\n",
+    "    return xy_grid\n",
+    "\n",
+    "\n",
+    "def draw_scatter(ax, x, y, dat = cluster_data.copy()):\n",
+    "    \n",
+    "    ## set plot limits and bbox parameters\n",
     "    poster_ax[ax].set_xlim(0, 1)\n",
     "    poster_ax[ax].set_ylim(0, 1)\n",
+    "    bb = dict(edgecolor = set_color['OrangeDark'], lw = 2,\n",
+    "                facecolor = set_color['OrangeBG'], boxstyle = 'square')\n",
     "    \n",
     "    ## scale coordinates\n",
-    "    def min_max_scale(x):\n",
+    "    def min_max_scale(x, the_max):\n",
     "        x = (x - min(x)) / (max(x) - min(x))\n",
-    "        x = (x * 0.70) + 0.10\n",
+    "        x = (x * the_max) + 0.10\n",
     "        return x\n",
-    "    dat['x_scaled'] = min_max_scale(dat[x])\n",
-    "    dat['y_scaled'] = min_max_scale(dat[y])\n",
+    "    dat['x_scaled'] = min_max_scale(dat[x], 0.80)\n",
+    "    dat['y_scaled'] = min_max_scale(dat[y], 0.77)\n",
     "    \n",
-    "    ##\n",
-    "    poster_ax[ax].scatter(dat['x_scaled'], dat[y], color = '#33221100')\n",
-    "    for i in dat.index:\n",
-    "        poster_ax[ax].text(color = set_color['OrangeDark'],\n",
-    "            x = dat.loc[i, 'x_scaled'], y = dat.loc[i, 'y_scaled'], s = i)\n",
+    "    ## disambiguate points\n",
+    "    spaced_xy = space_scatter('x_scaled', 'y_scaled', dat = dat)\n",
+    "    \n",
+    "    ## plot points\n",
+    "    poster_ax[ax].scatter(spaced_xy['x'], spaced_xy['y'], color = '#33221100')\n",
+    "    for i in spaced_xy.index:\n",
+    "        poster_ax[ax].text(color = set_color['OrangeDark'], bbox = bb,\n",
+    "            x = spaced_xy.loc[i, 'x'], y = spaced_xy.loc[i, 'y'],\n",
+    "            s = i, fontweight = 'bold', fontsize = set_font['small'] - 3)\n",
     "        \n",
+    "def draw_scatter_labels(ax, x_label, y_label):\n",
+    "    poster_ax[ax].text(x = 0.01, y = 0.5, s = y_label,\n",
+    "            fontsize = set_font['medium'], rotation = 90,\n",
+    "            color = set_color['OrangeDark'], fontweight = 'bold',\n",
+    "            horizontalalignment = 'left', verticalalignment = 'center')\n",
+    "    poster_ax[ax].text(x = 0.5, y = 0.01, s = x_label,\n",
+    "            fontsize = set_font['medium'],\n",
+    "            color = set_color['OrangeDark'], fontweight = 'bold',\n",
+    "            horizontalalignment = 'center', verticalalignment = 'bottom')\n",
+    "\n",
+    "\n",
     "## execute code\n",
-    "make_scatter('-<', 'income', 'edu_years')\n",
-    "make_scatter('->', 'income', 'life_expect')\n",
-    "make_scatter('V<', 'edu_years', 'life_expect')\n",
-    "make_scatter('V>', 'rep_pct')"
+    "draw_scatter('-<', 'income', 'edu_years')\n",
+    "draw_scatter_labels('-<', 'Income Per Capita', 'Average Years Of Education')\n",
+    "\n",
+    "draw_scatter('->', 'income', 'life_expect')\n",
+    "draw_scatter_labels('->', 'Income Per Capita', 'Average Life Expectancy')\n",
+    "\n",
+    "draw_scatter('V<', 'edu_years', 'life_expect')\n",
+    "draw_scatter_labels('V<', 'Average Years Of Education',\n",
+    "                    'Average Life Expectancy')\n",
+    "\n",
+    "draw_scatter('V>', 'rep_pct', 'hdi')\n",
+    "draw_scatter_labels('V>', 'Percentage Voting Republican',\n",
+    "                    'Human Development Index')"
    ]
   },
   {
@@ -1311,18 +1374,29 @@
     "        x = 0.99, y = height, s = title,\n",
     "        fontsize = set_font['medium'], fontweight = 'bold',\n",
     "        color = set_color['OrangeDark'],\n",
-    "        horizontalalignment = 'right', verticalalignment = 'top'\n",
-    "        )\n",
+    "        horizontalalignment = 'right', verticalalignment = 'top')\n",
     "    \n",
     "## execute code\n",
+    "make_title('explain', 2.99,\n",
+    "    'What Alternative State Borders' + '\\n' +\\\n",
+    "    'Would Consistently Put People'  + '\\n' +\\\n",
+    "    'Who Live Near Each Other In The'+ '\\n' +\\\n",
+    "    'Same State?' + '\\n\\n' +\\\n",
+    "    'How Would Quality of Life And'  + '\\n' +\\\n",
+    "    'Politics Vary Between The New'  + '\\n' +\\\n",
+    "    'States?'\n",
+    "          )\n",
+    "##make_title('elbow',   0.99, 'Optimization Curve\\nFor Cluster Assignments')\n",
+    "\n",
+    "\n",
     "make_title('A<', 1.99, 'HDI Score For Each Cluster')\n",
-    "make_title('A>', 1.99, 'Total Voters And Percentage\\nTrump Voters in 2020')\n",
+    "make_title('A>', 1.99, 'Total Voters And Percentage\\nRepublican Voters in 2020')\n",
     "\n",
     "make_title('-<', 0.99, 'Correspondence Between\\nIncome And Education')\n",
     "make_title('->', 0.99, 'Correspondence Between\\nIncome And Life Expectancy')\n",
     "make_title('V<', 0.99, 'Correspondence Between\\nEducation And Life Expectancy')\n",
     "make_title('V>', 0.99,\n",
-    "    'Correspondence Between HDI\\nAnd Percentage Trump Voters')"
+    "    'Correspondence Between Percent\\nRepublican Voters And HDI')"
    ]
   },
   {
@@ -1365,19 +1439,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 23:18:12\n",
-      "   H3: 23:18:12\n",
-      "  GD1: 23:18:12\n",
-      "  RD1: 23:18:12\n",
-      "  RD2: 23:18:13\n",
-      "  RD3: 23:18:13\n",
-      "  MD1: 23:18:20\n",
-      "  MD2: 23:18:20\n",
-      "  MD3: 23:18:20\n",
-      " PVD1: 23:18:21\n",
-      " PVD2: 23:18:21\n",
-      "  RV0: 23:18:21\n",
-      "  End: 23:18:28\n"
+      "   H2: 14:44:15\n",
+      "   H3: 14:44:15\n",
+      "  GD1: 14:44:15\n",
+      "  RD1: 14:44:15\n",
+      "  RD2: 14:44:15\n",
+      "  RD3: 14:44:15\n",
+      "  MD1: 14:44:22\n",
+      "  MD2: 14:44:22\n",
+      "  MD3: 14:44:22\n",
+      " PVD1: 14:44:22\n",
+      " PVD2: 14:44:23\n",
+      "  RV0: 14:44:23\n",
+      "  End: 14:44:29\n"
      ]
     }
    ],
