Complete explanatory/analysis text

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -151,8 +151,8 @@
     "\n",
     "## time-saver settings\n",
     "set_acceleration = {\n",
-    "    'dbf_cache'              : True, #1:40\n",
-    "    'sample_size'            : 1/10, #1/5, 1/10, 1/20 = 60, 19, 06 runtime minutes\n",
+    "    'dbf_cache'              : True,\n",
+    "    'sample_size'            : 1/5, ## 1/5, 1/10, 1/20 = 60, 19, 06 runtime min\n",
     "    'pop_cache'              : True,\n",
     "    'distance_parallel_cores': 8,\n",
     "    'distance_cache'         : True,\n",
@@ -738,7 +738,8 @@
     "    \n",
     "    ## extract level one partition and set max number of level two clusters\n",
     "    cl1 = ecs(cl1)\n",
-    "    max_cl2_clusters = int(48 / max(cl1)) * 2\n",
+    "    ## max_cl2_clusters = int(48 / max(cl1)) * 2 ## alternative approach\n",
+    "    max_cl2_clusters = max(cl1)\n",
     "    \n",
     "    ## generate level two clusters for the cities in each level one cluster\n",
     "    cl2 = dict()\n",
@@ -869,7 +870,72 @@
     "cluster_data['income'] = cluster_data['income'].round(0).astype(int)\n",
     "\n",
     "## \n",
-    "cluster_data['rep_pct'] = cluster_data['rep_vote'] / cluster_data['total_vote']"
+    "cluster_data['rep_pct'] = cluster_data['rep_vote'] / cluster_data['total_vote']\n",
+    "cluster_data['log_pop'] = np.log(cluster_data['population'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aaa13a9-d4ec-40c1-840c-9d3ca9a2fe2c",
+   "metadata": {},
+   "source": [
+    "#### CSS2 - Fill in explanation statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a6b8c89e-b560-4ff9-a7c1-a2ec9bec493f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_explain_stats(txt = explanatory_text, dat = cluster_data):\n",
+    "    \n",
+    "    ## make shell to hold statistics\n",
+    "    stats = dict()\n",
+    "    \n",
+    "    ## A - calculate number of new states\n",
+    "    stats['A'] = cluster_data.shape[0]\n",
+    "    \n",
+    "    ## B - median HDI\n",
+    "    stats['B'] = cluster_data.hdi.median().astype(int)\n",
+    "    \n",
+    "    ## C - HDI standard deviation\n",
+    "    stats['C'] = cluster_data.hdi.std().round(0).astype(int)\n",
+    "    \n",
+    "    ## D, E - total population in top five stats (count, percentage)\n",
+    "    x = cluster_data.population.copy().sort_values(ascending = False)[0:5].sum()\n",
+    "    stats['D'] = int(np.round(x/1e6))\n",
+    "    stats['E'] = ((x/cluster_data.population.sum()).round(2) * 100).astype(int)\n",
+    "    \n",
+    "    ## F - median Republican voter percentage\n",
+    "    stats['F'] = (cluster_data.rep_pct.median().round(2) * 100).astype(int)\n",
+    "    \n",
+    "    ## G, H - min and max Republican voter percentages\n",
+    "    stats['G'] = (cluster_data.rep_pct.max().round(2) * 100).astype(int)\n",
+    "    stats['H'] = (cluster_data.rep_pct.min().round(2) * 100).astype(int)\n",
+    "    \n",
+    "    ## I, J - Republican voter majorities among top / bottom 10 new states (HDI)\n",
+    "    x = cluster_data.copy().sort_values('hdi', ascending = False).rep_pct[0:9]\n",
+    "    stats['I'] = (x > 0.51).astype(int).sum()\n",
+    "    x = cluster_data.copy().sort_values('hdi', ascending = True).rep_pct[0:9]\n",
+    "    stats['J'] = (x > 0.51).astype(int).sum()\n",
+    "    \n",
+    "    ## K, N - population size 80th and 20th percentile\n",
+    "    stats['K']= (cluster_data.population.quantile(0.80)/1e6).round().astype(int)\n",
+    "    stats['N']= (cluster_data.population.quantile(0.20)/1e6).round().astype(int)\n",
+    "    \n",
+    "    ## L, M – HDI of new states with 80th/20th population percentiles\n",
+    "    x = cluster_data.loc[cluster_data.population >= stats['K'] * 1e6, 'hdi']\n",
+    "    stats['L'] = x.mean().round().astype(int)\n",
+    "    x = cluster_data.loc[cluster_data.population <= stats['N'] * 1e6, 'hdi']\n",
+    "    stats['M'] = x.mean().round().astype(int)\n",
+    "    \n",
+    "    ## insert statistics into the text\n",
+    "    return txt.format(**stats)\n",
+    "\n",
+    "## execute code\n",
+    "explanatory_text = calculate_explain_stats()"
    ]
   },
   {
@@ -890,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1412ba81-f5bc-4cdc-87e1-fa0a7e6e750a",
    "metadata": {},
    "outputs": [],
@@ -928,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3c4676da-dc84-42b5-a6d8-4c62a5f6ffcb",
    "metadata": {},
    "outputs": [],
@@ -973,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
    "metadata": {},
    "outputs": [],
@@ -994,16 +1060,17 @@
     "    global poster_ax\n",
     "    poster_ax = dict()\n",
     "    poster_ax['explain'] = poster_fig.add_subplot(poster_grid[0:4, 0:1])\n",
-    "    #poster_ax['elbow']   = poster_fig.add_subplot(poster_grid[3:4, 0:1])\n",
     "\n",
+    "    ## 2x1 bar charts\n",
     "    poster_ax['A<'] = poster_fig.add_subplot(poster_grid[0:2, 4:5])\n",
     "    poster_ax['A>'] = poster_fig.add_subplot(poster_grid[0:2, 5:6])\n",
+    "    poster_ax['V<'] = poster_fig.add_subplot(poster_grid[2:4, 4:5])\n",
     "    \n",
-    "    poster_ax['-<'] = poster_fig.add_subplot(poster_grid[2:3, 4:5])\n",
+    "    ## 1x2 scatterplots\n",
     "    poster_ax['->'] = poster_fig.add_subplot(poster_grid[2:3, 5:6])\n",
-    "    poster_ax['V<'] = poster_fig.add_subplot(poster_grid[3:4, 4:5])\n",
     "    poster_ax['V>'] = poster_fig.add_subplot(poster_grid[3:4, 5:6])\n",
     "    \n",
+    "    ## 2x3 maps\n",
     "    poster_ax['map1'] = poster_fig.add_subplot(poster_grid[0:2, 1:4],\n",
     "                                              projection = set_map['map_proj'])\n",
     "    poster_ax['map2'] = poster_fig.add_subplot(poster_grid[2:4, 1:4],\n",
@@ -1032,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c871d19a-6a5b-4561-adad-1df5fa151c7c",
    "metadata": {},
    "outputs": [],
@@ -1040,9 +1107,9 @@
     "def render_explanation(txt = explanatory_text):\n",
     "    poster_ax['explain'].set_ylim(0, 3)\n",
     "    poster_ax['explain'].set_xlim(0, 1)\n",
-    "    poster_ax['explain'].text(x = 0.05, y = 2.5, s = txt,\n",
+    "    poster_ax['explain'].text(x = 0.05, y = 0.03, s = txt,\n",
     "        fontweight = 'bold',\n",
-    "        horizontalalignment = 'left', verticalalignment = 'top',\n",
+    "        horizontalalignment = 'left', verticalalignment = 'bottom',\n",
     "        fontsize = set_font['small'], color = set_color['OrangeDark'])\n",
     "    \n",
     "render_explanation()"
@@ -1053,16 +1120,33 @@
    "id": "26b3bed7-8d9a-43d6-a71d-091da66a5140",
    "metadata": {},
    "source": [
-    "#### RV2 - draw optimization 'elbow' curve"
+    "#### RV2 - make title functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "82bf0029-1941-481e-90af-181cfd29ab5d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def make_title(ax, height, title):\n",
+    "    poster_ax[ax].text(\n",
+    "        x = 0.99, y = height, s = title,\n",
+    "        fontsize = set_font['medium'], fontweight = 'bold',\n",
+    "        color = set_color['OrangeDark'],\n",
+    "        horizontalalignment = 'right', verticalalignment = 'top')\n",
+    "    \n",
+    "## execute code\n",
+    "make_title('explain', 2.99,\n",
+    "    'What Alternative State Borders' + '\\n' +\\\n",
+    "    'Would Consistently Put People'  + '\\n' +\\\n",
+    "    'Who Live Near Each Other In The'+ '\\n' +\\\n",
+    "    'Same State?' + '\\n\\n' +\\\n",
+    "    'How Would Quality of Life And'  + '\\n' +\\\n",
+    "    'Politics Vary In The New States?'\n",
+    "          )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1074,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "65311cb6-7c5a-4d9b-8960-47244f43d3bc",
    "metadata": {},
    "outputs": [],
@@ -1143,7 +1227,7 @@
     "draw_generic_map('map2')\n",
     "label_cluster('map2', label_col = 'hdi_label')\n",
     "draw_cluster('map2', clust_polys_l2)\n",
-    "## draw_cluster('map2', clust_polys_l1, the_lw = 4)"
+    "draw_cluster('map2', clust_polys_l1, the_lw = 4)"
    ]
   },
   {
@@ -1156,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "66c2d825-5009-40c7-8cb3-173d4bf3bc79",
    "metadata": {},
    "outputs": [],
@@ -1164,12 +1248,13 @@
     "def draw_bar(ax, major_col, minor_col = None, dat = cluster_data.copy(),\n",
     "             unit = None):\n",
     "    \n",
-    "    dat = dat.iloc[::-1].copy()\n",
+    "    #dat = dat.iloc[::-1].copy()\n",
+    "    dat = dat.sort_values('hdi').copy()\n",
     "    \n",
     "    ## scale data for visualization purposes\n",
     "    def min_max_scale(x):\n",
     "        x = (x - min(x)) / (max(x) - min(x))\n",
-    "        n = 0.82\n",
+    "        n = 0.9\n",
     "        x = (x * n) + (1 - n)\n",
     "        return x\n",
     "    \n",
@@ -1181,9 +1266,13 @@
     "    ## convert bar labels\n",
     "    dat['label_major'] = dat[major_col]\n",
     "    if unit == '/M':\n",
-    "        dat['label_major'] = (dat['label_major'] / 1e6).round(0).astype(int)\n",
+    "        dat['label_major'] = (dat['label_major'] / 1e6).round(1)\n",
     "        dat['label_major'] = dat['label_major'].astype(str) + 'M'\n",
-    "        min_display_major = 1.5e6\n",
+    "        min_display_major = 0\n",
+    "    elif unit == '%':\n",
+    "        dat['label_major'] = (dat['label_major'] * 1e2).round(0).astype(int)\n",
+    "        dat['label_major'] = dat['label_major'].astype(str) + '%'\n",
+    "        min_display_major = 0\n",
     "    else:\n",
     "        min_display_major = 0\n",
     "\n",
@@ -1249,7 +1338,14 @@
     "\n",
     "## execute code\n",
     "draw_bar('A<', 'hdi')\n",
-    "draw_bar('A>', 'total_vote', minor_col = 'rep_vote', unit = '/M')"
+    "make_title('A<', 1.99, 'HDI Score For Each Cluster')\n",
+    "\n",
+    "draw_bar('A>', 'population',unit = '/M')\n",
+    "make_title('A>', 1.99, 'Population Totals For Each Cluster')\n",
+    "\n",
+    "draw_bar('V<', 'rep_pct', unit = '%')\n",
+    "make_title('V<', 1.99,\n",
+    "    'Percent Voting For The Republican\\nPresidential Candidate in 2020')"
    ]
   },
   {
@@ -1262,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "902e7bd8-d1df-416a-82a5-3c52df3fbf95",
    "metadata": {},
    "outputs": [],
@@ -1337,67 +1433,74 @@
     "            color = set_color['OrangeDark'], fontweight = 'bold',\n",
     "            horizontalalignment = 'center', verticalalignment = 'bottom')\n",
     "\n",
+    "## execute code - scatterplot panels\n",
+    "draw_scatter('->', 'rep_pct', 'log_pop')\n",
+    "draw_scatter_labels('->', 'Percentage Voting Republican',\n",
+    "                    'Total Population (Log)')\n",
+    "make_title('->', 0.99,\n",
+    "    'Correspondence Of Republican\\nVoters (%) And Total Population')\n",
     "\n",
-    "## execute code\n",
-    "draw_scatter('-<', 'income', 'edu_years')\n",
-    "draw_scatter_labels('-<', 'Income Per Capita', 'Average Years Of Education')\n",
-    "\n",
-    "draw_scatter('->', 'income', 'life_expect')\n",
-    "draw_scatter_labels('->', 'Income Per Capita', 'Average Life Expectancy')\n",
-    "\n",
-    "draw_scatter('V<', 'edu_years', 'life_expect')\n",
-    "draw_scatter_labels('V<', 'Average Years Of Education',\n",
+    "draw_scatter('V>', 'edu_years', 'life_expect')\n",
+    "draw_scatter_labels('V>', 'Average Years Of Education',\n",
     "                    'Average Life Expectancy')\n",
-    "\n",
-    "draw_scatter('V>', 'rep_pct', 'hdi')\n",
-    "draw_scatter_labels('V>', 'Percentage Voting Republican',\n",
-    "                    'Human Development Index')"
+    "make_title('V>', 0.99, 'Correspondence Of\\nEducation And Life Expectancy')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9405563-96c9-43d7-a8ea-ef049acd492b",
+   "id": "f1905627-f745-4265-8fe0-133a3985922f",
    "metadata": {},
    "source": [
-    "#### RV6 - Plot Titles"
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9df9eb9-cef0-40a2-9700-f3b77a68de61",
+   "metadata": {},
+   "source": [
+    "#### Test 1 - "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "0914ce73-b620-451b-914f-8b4199056050",
+   "execution_count": null,
+   "id": "b0ff17c8-1c3b-45f5-9a53-f007101ac066",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7732abb0-33ea-45b3-8efa-a4f03b65e63c",
+   "metadata": {},
    "source": [
-    "def make_title(ax, height, title):\n",
-    "    poster_ax[ax].text(\n",
-    "        x = 0.99, y = height, s = title,\n",
-    "        fontsize = set_font['medium'], fontweight = 'bold',\n",
-    "        color = set_color['OrangeDark'],\n",
-    "        horizontalalignment = 'right', verticalalignment = 'top')\n",
-    "    \n",
-    "## execute code\n",
-    "make_title('explain', 2.99,\n",
-    "    'What Alternative State Borders' + '\\n' +\\\n",
-    "    'Would Consistently Put People'  + '\\n' +\\\n",
-    "    'Who Live Near Each Other In The'+ '\\n' +\\\n",
-    "    'Same State?' + '\\n\\n' +\\\n",
-    "    'How Would Quality of Life And'  + '\\n' +\\\n",
-    "    'Politics Vary Between The New'  + '\\n' +\\\n",
-    "    'States?'\n",
-    "          )\n",
-    "##make_title('elbow',   0.99, 'Optimization Curve\\nFor Cluster Assignments')\n",
-    "\n",
-    "\n",
-    "make_title('A<', 1.99, 'HDI Score For Each Cluster')\n",
-    "make_title('A>', 1.99, 'Total Voters And Percentage\\nRepublican Voters in 2020')\n",
-    "\n",
-    "make_title('-<', 0.99, 'Correspondence Between\\nIncome And Education')\n",
-    "make_title('->', 0.99, 'Correspondence Between\\nIncome And Life Expectancy')\n",
-    "make_title('V<', 0.99, 'Correspondence Between\\nEducation And Life Expectancy')\n",
-    "make_title('V>', 0.99,\n",
-    "    'Correspondence Between Percent\\nRepublican Voters And HDI')"
+    "#### Test 2 - "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c8a2a9-0dd7-47da-a1ef-f253a6e9018d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2072d112-7ed8-4bdb-be59-d11f11b05828",
+   "metadata": {},
+   "source": [
+    "#### Test 3 - "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dee7cfd-e870-484c-85f9-32e2280adc12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1417,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "b2860728-2bc2-401e-a043-c037c8752604",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
@@ -1439,19 +1542,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 14:44:15\n",
-      "   H3: 14:44:15\n",
-      "  GD1: 14:44:15\n",
-      "  RD1: 14:44:15\n",
-      "  RD2: 14:44:15\n",
-      "  RD3: 14:44:15\n",
-      "  MD1: 14:44:22\n",
-      "  MD2: 14:44:22\n",
-      "  MD3: 14:44:22\n",
-      " PVD1: 14:44:22\n",
-      " PVD2: 14:44:23\n",
-      "  RV0: 14:44:23\n",
-      "  End: 14:44:29\n"
+      "   H2: 12:27:39\n",
+      "   H3: 12:27:39\n",
+      "  GD1: 12:27:39\n",
+      "  RD1: 12:27:39\n",
+      "  RD2: 12:27:39\n",
+      "  RD3: 12:27:39\n",
+      "  MD1: 12:28:21\n",
+      "  MD2: 12:28:21\n",
+      "  MD3: 12:28:21\n",
+      " PVD1: 12:28:21\n",
+      " PVD2: 12:28:23\n",
+      "  RV0: 12:28:23\n",
+      "  End: 12:28:30\n"
      ]
     }
    ],
